generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model City {
  id         Int       @id @default(autoincrement())
  city_name  String    @unique @db.VarChar(100)
  created_at DateTime  @default(now())
  slug       String    @unique @db.VarChar(120)
  batches    Batch[]
  students   Student[]
  admins     Admin[]   // 🔑 Add admin relation
}

model Batch {
  id         Int       @id @default(autoincrement())
  batch_name String    @db.VarChar(50)
  year       Int
  city_id    Int
  slug       String   @unique @db.VarChar(80)
  created_at DateTime @default(now())

  city     City      @relation(fields: [city_id], references: [id], onDelete: Cascade)
  students Student[]
  classes  Class[]
  admins   Admin[]   // 🔑 Add admin relation

  @@unique([city_id, year, batch_name])
  @@index([city_id])
}

model Student {
  id                  Int               @id @default(autoincrement())
  name                String            @db.VarChar(100)
  email               String            @unique @db.VarChar(150)
  username            String            @unique @db.VarChar(100)
  password_hash       String?
  google_id           String?           @unique @db.VarChar(100)
  enrollment_id       String?           @unique @db.VarChar(100)
  city_id             Int?
  batch_id            Int?
  leetcode_id         String?           @db.VarChar(100)
  gfg_id              String?           @db.VarChar(100)
  created_at          DateTime          @default(now())
  updated_at          DateTime          @updatedAt
  provider            String            @default("google")
  refresh_token       String?
  gfg_total_solved    Int               @default(0)
  last_synced_at      DateTime?
  lc_total_solved     Int               @default(0)
  bookmarks           Bookmark[]
  leaderboards        Leaderboard?
  batch               Batch?            @relation(fields: [batch_id], references: [id])
  city                City?             @relation(fields: [city_id], references: [id])
  progress            StudentProgress[]

  @@index([city_id])
  @@index([batch_id])
}

model Admin {
  id            Int       @id @default(autoincrement())
  name          String    @db.VarChar(100)
  email         String    @unique @db.VarChar(150)
  username      String    @unique @db.VarChar(100)
  password_hash String
  role          AdminRole @default(INTERN)
  city_id       Int?      //  Add default city for admin
  batch_id      Int?      //  Add default batch for admin
  created_at    DateTime  @default(now())
  updated_at    DateTime  @updatedAt
  refresh_token String?

  city          City?     @relation(fields: [city_id], references: [id])
  batch         Batch?    @relation(fields: [batch_id], references: [id])

  @@index([city_id])
  @@index([batch_id])
}

model Topic {
  id          Int      @id @default(autoincrement())
  topic_name  String   @unique @db.VarChar(150)
  slug        String   @unique @db.VarChar(80)
  description String?  @db.Text
  order       Int      @default(0)
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt

  classes     Class[]
  questionVisibility QuestionVisibility[]

  @@index([order])
}

model Question {
  id            Int                  @id @default(autoincrement())
  question_name String               @db.VarChar(255)
  question_link String               @unique
  platform      Platform             @default(LEETCODE)
  level         Level                @default(MEDIUM)
  type          QuestionType         @default(HOMEWORK)
  topic_id      Int
  created_at    DateTime             @default(now())
  bookmarks     Bookmark[]
  topic         Topic                @relation(fields: [topic_id], references: [id], onDelete: Cascade)
  visibility    QuestionVisibility[]
  progress      StudentProgress[]

  @@index([topic_id])
  @@index([platform])
  @@index([level])
}

model Class {
  id                 Int                  @id @default(autoincrement())
  topic_id           Int
  batch_id           Int
  pdf_url            String?
  description        String?
  duration_minutes   Int?
  class_date         DateTime?
  created_at         DateTime             @default(now())
  class_name         String               @db.VarChar(50)
  slug               String               @db.VarChar(150)
  batch              Batch                @relation(fields: [batch_id], references: [id], onDelete: Cascade)
  topic              Topic                @relation(fields: [topic_id], references: [id], onDelete: Cascade)
  questionVisibility QuestionVisibility[]

  @@unique([topic_id, batch_id, slug])
  @@unique([topic_id, batch_id, class_name])
  @@index([batch_id])
  @@index([topic_id])
}

model QuestionVisibility {
  id          Int      @id @default(autoincrement())
  class_id    Int
  question_id Int
  assigned_at DateTime @default(now())
  class       Class    @relation(fields: [class_id], references: [id], onDelete: Cascade)
  question    Question @relation(fields: [question_id], references: [id], onDelete: Cascade)

  @@unique([class_id, question_id])
  @@index([question_id])
}

model StudentProgress {
  id          Int      @id @default(autoincrement())
  student_id  Int
  question_id Int
  solved_at   DateTime @default(now())
  question    Question @relation(fields: [question_id], references: [id], onDelete: Cascade)
  student     Student  @relation(fields: [student_id], references: [id], onDelete: Cascade)

  @@unique([student_id, question_id])
  @@index([student_id])
  @@index([question_id])
}

model Bookmark {
  id          Int      @id @default(autoincrement())
  student_id  Int
  question_id Int
  created_at  DateTime @default(now())
  question    Question @relation(fields: [question_id], references: [id], onDelete: Cascade)
  student     Student  @relation(fields: [student_id], references: [id], onDelete: Cascade)

  @@unique([student_id, question_id])
  @@index([student_id])
}

model Leaderboard {
  id           Int      @id @default(autoincrement())
  student_id   Int      @unique
  max_streak   Int      @default(0)
  updated_at   DateTime @updatedAt
  easy_count   Int      @default(0)
  hard_count   Int      @default(0)
  medium_count Int      @default(0)
  student      Student  @relation(fields: [student_id], references: [id])
}

enum Platform {
  LEETCODE
  GFG
  OTHER
  INTERVIEWBIT
}

enum Level {
  EASY
  MEDIUM
  HARD
}

enum QuestionType {
  HOMEWORK
  CLASSWORK
}

enum AdminRole {
  SUPERADMIN
  TEACHER
  INTERN
}
